--- a/package.json
+++ b/package.json
@@ -11,10 +11,21 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "nuxt": "^3.12.2"
+    "@pinia/nuxt": "^0.5.1",
+    "nuxt": "^3.12.2",
+    "pinia": "^2.1.7",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/nuxt": "^10.11.0",
+    "dayjs-nuxt": "^2.1.9",
+    "nuxt-lodash": "^2.5.3",
+    "sass": "^1.77.6",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.10"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
