--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,13 +16,9 @@ steps:
     versionSpec: '20.x'
 
 - script:
-    echo "Running npm audit before fix"
-    npm audit
-    npm audit fix --force
-    echo "Running npm audit after fix"
-    npm audit
+    npm install
     npm run generate
-  displayName: 'npm install, fix vulnerabilities, and generate static page'
+  displayName: 'npm install and generate static page'
 
 - task: AzureStaticWebApp@0
   inputs:
